--- a/views/common/index.ejs
+++ b/views/common/index.ejs
@@ -5,24 +5,25 @@
 <head>
     <meta charset="UTF-8">
     <title>hui后台管理</title>
-    <link href="/plugins/bootstrap/dist/css/bootstrap.min.css" type="text/css" rel="stylesheet">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+    <link href="/plugins/bootstrap/dist/css/bootstrap.min.css"  type="text/css" rel="stylesheet">
     <link href="/plugins/bootstrap-table/bootstrap-table.min.css" type="text/css" rel="stylesheet">
     <link href="/stylesheets/app.css" type="text/css" rel="stylesheet">
     <link href="/plugins/alertify/themes/alertify.core.css" type="text/css" rel="stylesheet">
     <link href="/plugins/alertify/themes/alertify.bootstrap.css" type="text/css" rel="stylesheet">
 </head>
-<script src="/plugins/jquery-1.11.3.min.js"></script>
-<script src="/plugins/bootstrap-table/bootstrap-table.min.js"></script>
-<script src="/plugins/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="/plugins/fileupload/jquery.ui.widget.js"></script>
-<script src="/plugins/fileupload/jquery.fileupload.js"></script>
-<script src="/plugins/alertify/alertify.js"></script>
+<script src="/plugins/jquery-1.11.3.min.js" type="text/javascript"></script>
+<script src="/plugins/bootstrap-table/bootstrap-table.min.js" type="text/javascript"></script>
+<script src="/plugins/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="/plugins/fileupload/jquery.ui.widget.js" type="text/javascript"></script>
+<script src="/plugins/fileupload/jquery.fileupload.js" type="text/javascript"></script>
+<script src="/plugins/alertify/alertify.js" type="text/javascript"></script>
 <body class="site-menubar-unfold">
         
 <nav class="site-navbar navbar navbar-default navbar-fixed-top navbar-mega">
     <div class="navbar-header">
         <div class="navbar-brand navbar-brand-center site-gridmenu-toggle">
-            <span class="navbar-brand-text hidden-xs">HUI-Admin</span>
+            <span class="navbar-brand-text hidden-xs">项目管理</span>
         </div>
     </div>
     <div class="navbar-container container-fluid">
@@ -31,6 +32,7 @@
                 <li class="hidden-float">
                     <a><i class="icon hamburger hamburger-arrow-left hided unfolded"><span class="hamburger-bar"></span></i></a>
                 </li>
+                <li class="pull-right"><a href="/logout">登出</a></li>
             </ul>
         </div>
     </div>
