--- a/views/project/projectList.ejs
+++ b/views/project/projectList.ejs
@@ -57,5 +57,5 @@
             </div>
         </div>
     </div>
-    <script src="/javascripts/project/projectList.js"></script>
+    <script src="/javascripts/project/projectList.js" type="text/javascript"></script>
     <% include ../common/foot.ejs %>
